--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rbvcprofile-client",
   "private": true,
-  "version": "0.1.5",
+  "version": "0.1.6",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -12,16 +12,22 @@
   },
   "dependencies": {
     "@types/react-router-dom": "5.3.3",
+    "dotenv": "^16.3.1",
     "latest": "^0.2.0",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^1.0.5",
