--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": false,
+    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
@@ -23,3 +23,4 @@
   "include": ["src", "src/config"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
+
