--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rbvcprofile-client",
   "private": true,
-  "version": "0.3.3",
+  "version": "0.3.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.0",
+    "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
